# probe-detection-submission

./: .gitignore  README.md  config.yaml  inference.py  pyproject.toml  train.py
configs/: config_A_no_aug.yaml  config_B_light_aug.yaml  config_C_heavy_aug.yaml  config_D_light_aug_3.yaml  config_E_light_aug_4.yaml  config_F_light_aug_8.yaml  config_G_no_geo_aug.yaml  config_H_scale_shear_rotate_geo_aug.yaml  config_I_all_geo_aug.yaml  config_J_v8.yaml  config_K_v12_nano.yaml  config_M_FasterRCNN.yaml  config_N_v12_nano_768.yaml  config_O_v12_nano_512.yaml  config_P_v12_nano_rect.yaml  config_Q1_ultra_low_lr.yaml  config_Q2_ultra_high_lr.yaml  config_Q3_long_warmup_cosine.yaml  config_Q4_strong_decay_linear.yaml  config_Q5_high_momentum_low_decay.yaml  config_Q6_low_momentum_heavy_decay.yaml  config_test.yaml  final_config.yaml
data/: __init__.py  labels_internal.json  labels_internal_with_negs.json  prepare_data_lomo_splits.py  prepare_data_single_split.py  prepare_negatives.py  probe_labels.json
data/splits/: train.txt
data/splits_lomo/fold_1_E300PREMP00002/: train.txt  val.txt
data/splits_neg/: val.txt
data_analysis/: comprehensive_analysis.py
results/: benchmarks.csv  results_compact.xlsx  results_extended.xlsx
scripts/: bench_infer.py  bench_plot.py  reporting.py  visualize_augmentations.py
src/: config.py  main.py
src/cv/: lomo.py  runner.py
src/datasets/: augment.py  canonical.py
src/eval/: filters.py  metrics.py  op_select.py  sweep.py  validate.py  viz.py
src/trainers/: rcnn_trainer.py  yolo_trainer.py
src/utils/: run_logger.py
(+20 files in other folders)
