[project]
name = "probe-detection"
version = "0.1.0"
description = "Probe detection (Elios3 UT payload) – modular training, evaluation, and inference."
requires-python = ">=3.11"
dependencies = [
  # Core data processing
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  
  # Computer vision and image processing
  "opencv-python>=4.5.0",
  "albumentations==2.0.8",
  
  # Deep learning frameworks
  "torch>=2.0.0",
  "torchvision>=0.23.0",
  "ultralytics>=8.3.0",
  
  # Configuration and utilities
  "pyyaml>=6.0",
  "tensorboard>=2.10.0",
  "openpyxl>=3.0.0",
  "filelock>=3.12.0",
  "tqdm>=4.67,
  
  # Data analysis and visualization (for analysis scripts)
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
]

[tool.setuptools]
